unpackaged/main/default/objects/License_Usage__c/License_Usage__c.object-meta.xml
<CustomObject>
    <label>License Usage</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>License Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Usages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>