unpackaged/main/default/objects/License_Usage__c/fields/License_Definition_Key__c.field-meta.xml
<CustomField>
    <fullName>License_Definition_Key__c</fullName>
    <label>License Definition Key</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>AUL</fullName>
            </value>
            <value>
                <fullName>CLOUD_INTEGRATION_USER</fullName>
            </value>
            <value>
                <fullName>CSN_External_User</fullName>
            </value>
            <value>
                <fullName>CSN_User</fullName>
            </value>
            <value>
                <fullName>FDC_ISV_SUB</fullName>
            </value>
            <value>
                <fullName>GUEST</fullName>
            </value>
            <value>
                <fullName>HIGH_VOLUME_PORTAL</fullName>
            </value>
            <value>
                <fullName>FDC_SUB</fullName>
            </value>
            <value>
                <fullName>High_Volume_Customer_Portal_User</fullName>
            </value>
            <value>
                <fullName>INSIGHTS_INTEGRATION_USER</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Community</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Community_Login</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Community_Plus</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Portal_Basic</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Community_Plus_Login</fullName>
            </value>
            <value>
                <fullName>PID_Customer_Portal_Standard</fullName>
            </value>
            <value>
                <fullName>PID_External_Identity</fullName>
            </value>
            <value>
                <fullName>PID_FDC_FREE</fullName>
            </value>
            <value>
                <fullName>PID_Identity_User</fullName>
            </value>
            <value>
                <fullName>PID_Partner_Community</fullName>
            </value>
            <value>
                <fullName>PID_Partner_Community_Login</fullName>
            </value>
            <value>
                <fullName>PID_STANDARD_PRM</fullName>
            </value>
            <value>
                <fullName>PID_WCUSER</fullName>
            </value>
            <value>
                <fullName>PID_STRATEGIC_PRM</fullName>
            </value>
            <value>
                <fullName>PID_XOrg_Proxy_User</fullName>
            </value>
            <value>
                <fullName>PLATFORM_PORTAL</fullName>
            </value>
            <value>
                <fullName>Platform_Portal_User</fullName>
            </value>
            <value>
                <fullName>PID_External_Apps_Login</fullName>
            </value>
            <value>
                <fullName>SALESFORCE_INTEGRATION_USER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>