unpackaged/main/default/objects/License_Usage__c/fields/License_Snapshot_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>License_Snapshot_Date_Time__c</fullName>
    <label>License Snapshot Date/Time</label>
    <type>DateTime</type>
</CustomField>