unpackaged/main/default/objects/License_Usage__c/fields/Namespace_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Namespace_Prefix__c</fullName>
    <label>Namespace Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>