unpackaged/main/default/objects/License_Usage__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Used_Licenses__c</columns>
    <columns>Total_Licenses__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Package_Id__c</columns>
    <columns>Namespace_Prefix__c</columns>
    <columns>Name__c</columns>
    <columns>Licenses_Remaining__c</columns>
    <columns>License_Snapshot_Date_Time__c</columns>
    <columns>License_Definition_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>